--- a/my-telegram-bot/render.yaml
+++ b/my-telegram-bot/render.yaml
@@ -1,6 +1,14 @@
 services:
-  - type: worker
-    name: telegram-bot
+  - type: web
+    name: telegram-support-bot
     env: python
-    buildCommand: ""
+    plan: free
+    buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
+    envVars:
+      - key: BOT_TOKEN
+        sync: false
+      - key: WEBHOOK_URL
+        sync: false
+      - key: AI_API_TOKEN
+        sync: false
