fix: Rename AI_API_TOKEN to ABI_API_TOKEN

--- a/my-telegram-bot/render.yaml
+++ b/my-telegram-bot/render.yaml
@@ -10,5 +10,5 @@ services:
         sync: false
       - key: WEBHOOK_URL
         sync: false
-      - key: AI_API_TOKEN
+      - key: ABI_API_TOKEN
         sync: false
