--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot[webhooks]==21.6
+python-telegram-bot==21.6
 Flask==3.0.3
 requests==2.32.3
-httpx==0.24.1
+httpx==0.27.0
 openai==2.7.2
