--- a/src/render.yaml
+++ b/src/render.yaml
@@ -10,7 +10,9 @@ services:
         sync: false
       - key: WEBHOOK_URL
         sync: false
-      - key: ABI_API_TOKEN
-        sync: false
       - key: OPENAI_API_KEY
+        sync: false
+      - key: AGENT_API_TOKEN
+        sync: false
+      - key: AGENT_API_URL
         sync: false
